# annotation-agent

./: .gitignore  PROJECT_STATUS.md  README.md
backend/: pyproject.toml
backend/data/eval_comparison/: comparison_summary.txt
backend/src/: config.py  main.py
backend/src/api/routes/: annotation.py  generation.py  nlcommand.py  samples.py  styles.py  training.py
backend/src/ml/: annotation_generator.py  charset.py  diffbrush_pipeline.py  eval_comparison.py  eval_diffusionpen.py  layout_engine.py  llm_client.py  lora_trainer.py  mock_pipeline.py  modal_client.py  modal_inference.py  pipeline.py  rnn_inference.py  stroke_pipeline.py  stroke_processing.py  style_encoder.py  style_store.py
backend/src/services/: annotation_planner.py  annotation_service.py  generation_service.py  nl_command_service.py  sample_service.py  style_service.py  training_service.py
backend/src/utils/: image_utils.py  pdf_utils.py
backend/src/workers/: task_queue.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
frontend/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.tsx  app.css  main.tsx
frontend/src/components/Canvas/: Canvas.tsx  CanvasToolbar.tsx  PDFLayer.tsx
frontend/src/lib/: annotationExecutor.ts  coordinateMapper.ts  noise.ts  strokeRenderer.ts  wobble.ts
frontend/src/services/: api.ts  wsClient.ts
frontend/src/stores/: canvasStore.ts  chatStore.ts  projectStore.ts  styleStore.ts
frontend/src/types/: api.ts  canvas.ts  project.ts
(+15 files in other folders)
